fix description overflow..

--- a/client/src/styles/slidecard.css
+++ b/client/src/styles/slidecard.css
@@ -23,20 +23,28 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 20px;
+  width: 257px;
+  padding: 20px;
   color: white;
   padding: 10px;
+  overflow: hidden;
   z-index: 3; /* Ensure it appears above the shadows */
 }
 
 .story-description h3 {
   margin: 0;
+
   font-size: 18px;
+  white-space: wrap;
 }
 
 .story-description p {
   margin: 5px 0 0 0;
   font-size: 14px;
+  padding-right: 20px;
+  margin-right: 20px;
+  width: 257px;
 }
 
 .slides-number {
